# promptpad

./: .env.example  .gitignore  Dockerfile  README.md  STRUCTURE.md  makefile  pyproject.toml
.github/: lint-and-build.yml
.github/workflows/: lint-and-build.yml
api-gateway/: package.json  pnpm-lock.yaml
api-gateway/src/: main.ts
api-gateway/src/app/: app.module.ts
api-gateway/src/prompt/: prompt.controller.ts  prompt.service.ts
api-gateway/src/status/: status.controller.ts  status.service.ts
api-gateway/src/types/: index.ts
prompt-engine/: README.md  __init__.py  cli.py  main.py
prompt-engine/api/: __init__.py
prompt-engine/cli/: main.py
prompt-engine/config/: settings.py
prompt-engine/core/: __init__.py  prompt_enhancer.py
prompt_engine/: API.md  __init__.py  cli.py  main.py
prompt_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
prompt_engine/api/: __init__.py  app.py
prompt_engine/cli/: main.py
prompt_engine/config/: __init__.py
prompt_engine/core/: __init__.py  pipeline.py  platform_templates.py  prompt_enhancer.py  prompt_refiner.py
promptpad-ui/: .env.example  package-lock.json  package.json  pnpm-lock.yaml
promptpad-ui/app/: layout.tsx  page.tsx  robots.ts  sitemap.ts
promptpad-ui/app/dashboard/: layout.tsx  page.tsx
promptpad-ui/components/: index.ts
promptpad-ui/lib/: index.ts
promptpad/api/: app.py
promptpad/cli/: __init__.py
promptpad/config/: __init__.py
promptpad/core/: context_analyzer.py  intent_interpreter.py  prompt_generator.py  prompt_refiner.py
(+4 files in other folders)
